Fix events arrow on mobile

--- a/assets/scss/_community.scss
+++ b/assets/scss/_community.scss
@@ -105,9 +105,9 @@
     }
 
     &_chevron_right {
-      height: 40px;
-      width: 30px;
-      margin-top: -10px;
+      height: auto;
+      width: 20px;
+      margin: 0 auto;
     }
   }
 
